# axom

./: .gitlab-ci.yml  .gitmodules  .mailmap  .uberenv_config.json  CITATION.cff  COPYRIGHT  LICENSE  README.md  RELEASE-NOTES.md  config-build.py  rzwhippet-toss_4_x86_64_ib-gcc@10.3.1.cmake
src/axom/bump/: BlendData.hpp  CMakeLists.txt  CoordsetBlender.hpp  CoordsetExtents.hpp  CoordsetSlicer.hpp  ExtractZones.hpp  ExtractZonesAndMatsetPolyhedral.hpp  ExtrudeMesh.hpp  FieldBlender.hpp  FieldSlicer.hpp  HashNaming.hpp  IndexingPolicies.hpp  MakePointMesh.hpp  MakePolyhedralTopology.hpp  MakeUnstructured.hpp  MakeZoneCenters.hpp  MakeZoneVolumes.hpp  MapBasedNaming.hpp  MatsetSlicer.hpp  MergeCoordsetPoints.hpp  MergeMeshes.hpp  MergePolyhedralFaces.hpp  MeshTester.cpp  MinMax.hpp  NodeToZoneRelationBuilder.hpp  Options.hpp  PrimalAdaptor.hpp  RecenterField.hpp  SelectedZones.hpp  TopologyMapper.hpp  Unique.hpp  VariableShape.hpp  ZoneListBuilder.hpp  doxygen_mainpage.md
src/axom/bump/clipping/: BlendGroupBuilder.hpp  ClipCases.h  ClipCasesHex.cpp  ClipCasesPoly5.cpp  ClipCasesPoly6.cpp  ClipCasesPyr.cpp  ClipCasesQua.cpp  ClipCasesTet.cpp  ClipCasesTri.cpp  ClipCasesWdg.cpp  ClipField.hpp  ClipOptions.hpp  ClipTableManager.hpp  CutCasesHex.cpp  CutCasesPyramid.cpp  CutCasesTet.cpp  CutCasesTri.cpp  CutCasesWedge.cpp  convert_clip_cases.py  convert_triangles.py  polygonalClipCasesPoly5.cpp  polygonalClipCasesPoly6.cpp  polygonalClipCasesPoly7.cpp  polygonalClipCasesPoly8.cpp  polygonalClipCasesQua.cpp
src/axom/bump/data/: MeshTester.cpp  MeshTester.hpp
src/axom/bump/extraction/: BlendGroupBuilder.hpp  ClipCasesPyr.cpp  ClipField.hpp  ClipOptions.hpp  ClipTableManager.cpp  ClipTableManager.hpp  CutField.hpp  CutTableManager.cpp  CutTableManager.hpp  ExtractionConstants.hpp  ExtractorOptions.hpp  FieldIntersector.hpp  FieldOptions.hpp  PlaneIntersector.hpp  PlaneSlice.hpp  Table.cpp  Table.hpp  TableBasedExtractor.hpp  TableManager.cpp  TableManager.hpp
src/axom/bump/io/: save.cpp  save.hpp
src/axom/bump/tests/: CMakeLists.txt  blueprint_testing_data_helpers.hpp  blueprint_testing_helpers.hpp  bump_blueprint_utilities.cpp  bump_clipfield.cpp  bump_conduit_memory_copy_sync.cpp  bump_coordset_extents.cpp  bump_cutfield.cpp  bump_make_polyhedral_topology.cpp  bump_mergemeshes.cpp  bump_mesh_operations.cpp  bump_node_to_zone_relation.cpp  bump_planeslice.cpp  bump_slicers.cpp  bump_topology_mapper.cpp  bump_utilities.cpp  bump_views.cpp  bump_views_indexing.cpp  mir_make_polyhedral_topology.cpp
src/axom/bump/utilities/: CoordsetBlender.hpp  CoordsetExtents.hpp  ExtractZones.hpp  ExtractZonesAndMatsetPolyhedral.hpp  ExtrudeMesh.hpp  FieldBlender.hpp  FieldSlicer.hpp  HashNaming.hpp  IndexingPolicies.hpp  MakePointMesh.hpp  MakePolyhedralTopology.hpp  MakeZoneCenters.hpp  MatsetSlicer.hpp  MergeCoordsetPoints.hpp  MergeMeshes.hpp  MergePolyhedralFaces.hpp  MinMax.hpp  NodeToZoneRelationBuilder.hpp  Options.hpp  PrimalAdaptor.hpp  RecenterField.hpp  SelectedZones.hpp  TopologyMapper.hpp  Unique.hpp  ZoneListBuilder.hpp  blueprint_utilities.cpp  blueprint_utilities.hpp  conduit_array_view.hpp  conduit_memory.cpp  conduit_memory.hpp  conduit_traits.cpp  conduit_traits.hpp  utilities.hpp
src/axom/bump/views/: BasicIndexing.hpp  ExplicitCoordsetView.hpp  MaterialView.cpp  MaterialView.hpp  NodeArrayView.hpp  RectilinearCoordsetView.hpp  Shapes.hpp  StridedStructuredIndexing.hpp  StructuredIndexing.hpp  StructuredTopologyView.hpp  UniformCoordsetView.hpp  UnstructuredTopologyMixedShapeView.cpp  UnstructuredTopologyMixedShapeView.hpp  UnstructuredTopologyPolyhedralView.hpp  UnstructuredTopologySingleShapeView.hpp  dispatch_coordset.hpp  dispatch_material.hpp  dispatch_rectilinear_topology.hpp  dispatch_structured_topology.hpp  dispatch_topology.hpp  dispatch_uniform_topology.hpp  dispatch_unstructured_topology.hpp  dispatch_utilities.cpp  dispatch_utilities.hpp  view_traits.hpp
src/axom/mir/examples/: CMakeLists.txt
src/axom/quest/: AllNearestNeighbors.cpp  AllNearestNeighbors.hpp  CMakeLists.txt  CoordinateTransformer.hpp  Delaunay.hpp  DiscreteShape.cpp  DiscreteShape.hpp  Discretize.cpp  Discretize.hpp  DistributedClosestPoint.cpp  DistributedClosestPoint.hpp  FSorClipper.cpp  FSorClipper.hpp  FastApproximateGWN.hpp  FastWindingNumber.hpp  GWNMethods.hpp  GeometryClipper.cpp  GeometryClipper.hpp  GeometryClipperStrategy.cpp  GeometryClipperStrategy.hpp  HexClipper.cpp  HexClipper.hpp  InOutOctree.hpp  IntersectionShaper.hpp  LinearizeCurves.cpp  LinearizeCurves.hpp  MarchingCubes.cpp  MarchingCubes.hpp  MeshClipper.cpp  MeshClipper.hpp  MeshClipperStrategy.cpp  MeshClipperStrategy.hpp  MeshTester.cpp  MeshTester.hpp  MeshViewUtil.hpp  Plane3DClipper.cpp  Plane3DClipper.hpp  PointInCell.hpp  SamplingShaper.hpp  ScatteredInterpolation.hpp  (+16 more)
src/axom/quest/benchmarks/: CMakeLists.txt  quest_delaunay_circumsphere.cpp
src/axom/quest/detail/: AllNearestNeighbors_detail.hpp  DelaunayElementFinder.hpp  DelaunayImpl.hpp  DelaunayInsertionHelper.hpp  DelaunayPointLocation.hpp  DelaunayValidation.hpp  Discretize_detail.hpp  DistributedClosestPointImpl.hpp  GeometryClipperDelegateExec.hpp  MarchingCubesImpl.hpp  MarchingCubesSingleDomain.cpp  MarchingCubesSingleDomain.hpp  MeshTester_detail.hpp  PointFinder.hpp  PointInCellMeshWrapper_mfem.hpp  marching_cubes_lookup.hpp
src/axom/quest/examples/: CMakeLists.txt  containment_driver.cpp  delaunay_triangulation.cpp  make_shapes.py  point_in_cell_benchmark.cpp  quest_bvh_two_pass.cpp  quest_candidates_example.cpp  quest_inout_interface.F  (+15 more)
src/docs/: CMakeLists.txt  dependencies.dot  licenses.rst
src/docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/examples/: CMakeLists.txt
src/examples/radiuss_tutorial/: CMakeLists.txt  host-config.cmake.in
src/examples/shaping_tutorial/: CMakeLists.txt  README.md  host-config.cmake.in
src/examples/using-with-blt/: CMakeLists.txt  example.cpp  host-config.cmake.in
src/examples/using-with-cmake/: CMakeLists.txt  host-config.cmake.in
src/examples/using-with-make/: Makefile.in  example.cpp
(+1412 files in other folders)
