# Copyright (c) Lawrence Livermore National Security, LLC and other
# Axom Project Contributors. See top-level LICENSE and COPYRIGHT
# files for dates and other details.
#
# SPDX-License-Identifier: (BSD-3-Clause)
#------------------------------------------------------------------------------
# documentation targets
#------------------------------------------------------------------------------

if(DOXYGEN_FOUND)
    add_subdirectory(doxygen)
endif()
