# Copyright (c) Lawrence Livermore National Security, LLC and other
# Axom Project Contributors. See top-level LICENSE and COPYRIGHT
# files for dates and other details.
#
# SPDX-License-Identifier: (BSD-3-Clause)

add_subdirectory(concentric_circles)
add_subdirectory(heavily_mixed)
add_subdirectory(tutorial_simple)
